// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Access Create CREATE creates role, resources and CREATE permission 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole": Permission {
      "dynamicCheckers": Object {
        "create": Object {},
        "delete": Object {},
        "read": Object {},
        "update": Object {},
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": true,
          "delete": false,
          "read": false,
          "update": false,
        },
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Create CREATE creates role, resources and CREATE permission with dynamic checker 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole": Permission {
      "dynamicCheckers": Object {
        "create": Object {
          "dynamicCheckerResolve": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "delete": Object {},
        "read": Object {},
        "update": Object {},
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": true,
          "delete": false,
          "read": false,
          "update": false,
        },
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Create DELETE creates role, resources and DELETE permission 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole": Permission {
      "dynamicCheckers": Object {
        "create": Object {},
        "delete": Object {},
        "read": Object {},
        "update": Object {},
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": false,
          "delete": true,
          "read": false,
          "update": false,
        },
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Create DELETE creates role, resources and DELETE permission with dynamic checker 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole": Permission {
      "dynamicCheckers": Object {
        "create": Object {},
        "delete": Object {
          "dynamicCheckerReject": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "read": Object {},
        "update": Object {},
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": false,
          "delete": true,
          "read": false,
          "update": false,
        },
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Create READ creates role, resources and READ permission 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole": Permission {
      "dynamicCheckers": Object {
        "create": Object {},
        "delete": Object {},
        "read": Object {},
        "update": Object {},
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": false,
          "delete": false,
          "read": true,
          "update": false,
        },
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Create READ creates role, resources and READ permission with dynamic checker 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole": Permission {
      "dynamicCheckers": Object {
        "create": Object {},
        "delete": Object {},
        "read": Object {
          "dynamicCheckerReject": DynamicChecker {
            "checker": [MockFunction],
          },
        },
        "update": Object {},
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": false,
          "delete": false,
          "read": true,
          "update": false,
        },
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Create UPDATE creates role, resources and UPDATE permission 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole": Permission {
      "dynamicCheckers": Object {
        "create": Object {},
        "delete": Object {},
        "read": Object {},
        "update": Object {},
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": false,
          "delete": false,
          "read": false,
          "update": true,
        },
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Create UPDATE creates role, resources and UPDATE permission with dynamic checker 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole": Permission {
      "dynamicCheckers": Object {
        "create": Object {},
        "delete": Object {},
        "read": Object {},
        "update": Object {
          "dynamicCheckerResolve": DynamicChecker {
            "checker": [MockFunction],
          },
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
      "staticChecker": StaticChecker {
        "permissions": Object {
          "create": false,
          "delete": false,
          "read": false,
          "update": true,
        },
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;
